--- a/src/components/View/styles.scss
+++ b/src/components/View/styles.scss
@@ -16,6 +16,7 @@ $view-header__padding-x: 3 * $base__size;
   padding: $view-header__padding-y $view-header__padding-x;
   font-size: $font-size__md;
   font-weight: 600;
+  z-index: $z-index__view-header;
 }
 
 .view-body {
